--- a/iau_prj_env/bitarovsky_machacova_IAU_prj3.ipynb
+++ b/iau_prj_env/bitarovsky_machacova_IAU_prj3.ipynb
@@ -145,7 +145,8 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_selection import mutual_info_regression, chi2, f_regression, f_classif\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier"
    ]
   },
   {
@@ -1103,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "860c8b15-16a0-4511-8e68-80a86fea9a52",
    "metadata": {
     "tags": []
@@ -1119,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "14201eb1-2169-4851-963f-6ca83db0f3a4",
    "metadata": {},
    "outputs": [],
@@ -1129,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "fa710d44-226e-4346-9b74-75106e3abd80",
    "metadata": {},
    "outputs": [
@@ -1137,10 +1138,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7966\n",
-      "7966\n",
-      "3925\n",
-      "3925\n"
+      "7529\n",
+      "7529\n",
+      "3709\n",
+      "3709\n"
      ]
     }
    ],
@@ -1161,18 +1162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "7b103f36-31a3-468a-894e-ed208e3e0d3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_results(predict_train, predict_test, y_train, y_test):\n",
+    "def print_results(predicted_train, predicted_test, y_train, y_test):\n",
     "    \n",
     "    print(\"Predicting for train dataset:\")\n",
-    "    print(classification_report(y_train, pred_train))\n",
+    "    print(classification_report(y_train, predicted_train))\n",
     "\n",
     "    print(\"Predicting for test dataset:\")\n",
-    "    print(classification_report(y_test, pred_test))\n",
+    "    print(classification_report(y_test, predicted_test))\n",
     "    \n",
     "    pass"
    ]
@@ -1209,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "9843431f-43a7-40cd-a3cf-cf604b9428f8",
    "metadata": {},
    "outputs": [],
@@ -1219,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "05d11285-dd95-4d54-99f2-053b27872dd0",
    "metadata": {},
    "outputs": [],
@@ -1229,21 +1230,44 @@
     "    cls = DecisionTreeClassifier(max_depth=None, random_state=1)\n",
     "    cls.fit(X_train, y_train)\n",
     "    \n",
-    "    pred_train = cls.predict(X_train)\n",
-    "    pred_test = cls.predict(X_test)\n",
+    "    predicted_train = cls.predict(X_train)\n",
+    "    predicted_test = cls.predict(X_test)\n",
     "    \n",
-    "    return cls, pred_train, pred_test"
+    "    print_results(predicted_train, predicted_test, y_train, y_test)\n",
+    "    \n",
+    "    return cls, predicted_train, predicted_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3e710b84-20b7-44fa-9c68-6ed8bdead31f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'DecisionTreeClassifier' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [34], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdecisionTreeDriver\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn [32], line 3\u001b[0m, in \u001b[0;36mdecisionTreeDriver\u001b[1;34m(X_train, X_test, y_train, y_test)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecisionTreeDriver\u001b[39m(X_train, X_test, y_train, y_test):\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mDecisionTreeClassifier\u001b[49m(max_depth\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m      6\u001b[0m     predicted_train \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mpredict(X_train)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'DecisionTreeClassifier' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "decisionTreeDriver(X_train, X_test, y_train, y_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e710b84-20b7-44fa-9c68-6ed8bdead31f",
+   "id": "06b1f2f5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -1262,7 +1286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
