--- a/iau_prj_env/bitarovsky_machacova_IAU_prj3.ipynb
+++ b/iau_prj_env/bitarovsky_machacova_IAU_prj3.ipynb
@@ -146,7 +146,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_selection import mutual_info_regression, chi2, f_regression, f_classif\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
@@ -1240,21 +1241,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "3e710b84-20b7-44fa-9c68-6ed8bdead31f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'DecisionTreeClassifier' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [34], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdecisionTreeDriver\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn [32], line 3\u001b[0m, in \u001b[0;36mdecisionTreeDriver\u001b[1;34m(X_train, X_test, y_train, y_test)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecisionTreeDriver\u001b[39m(X_train, X_test, y_train, y_test):\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mDecisionTreeClassifier\u001b[49m(max_depth\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m      6\u001b[0m     predicted_train \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mpredict(X_train)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'DecisionTreeClassifier' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicting for train dataset:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       1.00      1.00      1.00      3061\n",
+      "         1.0       1.00      1.00      1.00      4468\n",
+      "\n",
+      "    accuracy                           1.00      7529\n",
+      "   macro avg       1.00      1.00      1.00      7529\n",
+      "weighted avg       1.00      1.00      1.00      7529\n",
+      "\n",
+      "Predicting for test dataset:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.85      0.86      0.85      1499\n",
+      "         1.0       0.90      0.90      0.90      2210\n",
+      "\n",
+      "    accuracy                           0.88      3709\n",
+      "   macro avg       0.88      0.88      0.88      3709\n",
+      "weighted avg       0.88      0.88      0.88      3709\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Emmachac\\PycharmProjects\\venv\\lib\\site-packages\\sklearn\\base.py:493: FutureWarning: The feature names should match those that were passed during fit. Starting version 1.2, an error will be raised.\n",
+      "Feature names must be in the same order as they were in fit.\n",
+      "\n",
+      "  warnings.warn(message, FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(DecisionTreeClassifier(random_state=1),\n",
+       " array([0., 0., 0., ..., 0., 1., 0.]),\n",
+       " array([1., 1., 1., ..., 1., 1., 1.]))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1264,7 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06b1f2f5",
+   "id": "275ee45b",
    "metadata": {},
    "outputs": [],
    "source": []
