--- a/iau_prj_env/bitarovsky_machacova_IAU_prj3.ipynb
+++ b/iau_prj_env/bitarovsky_machacova_IAU_prj3.ipynb
@@ -1094,68 +1094,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "f6504026-ea70-42c1-ae52-a481a43278f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pipelineGenerator2():\n",
-    "    \n",
-    "    pipeline2 =  Pipeline([\n",
-    "        ('HandleNaNs', HandleNaNs_mean()),\n",
-    "        ('HandleLocation', HandleLocation()),\n",
-    "        ('HandleOutliers', HandleOutliers_replace()),\n",
-    "        ('HandleTransformations', HandleTransformations_scaleMM()),\n",
-    "        ('HandleSelection', VarianceThreshold_do()),\n",
-    "        ('Split', Split()),\n",
-    "        ('handleSelection2', Selection_Percentile_f_classif()),\n",
-    "        \n",
-    "    ])\n",
-    "    return pipeline2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "e5d2c524",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['TEMP', 'PRES', 'PM2.5', 'NOx', 'PM10', 'C2H3NO5', 'CH4', 'Pb', 'NH3', 'SO2', 'O3', 'CO', 'PAHs', 'H2CO', 'CFCs']\n",
-      "index       0\n",
-      "location    0\n",
-      "warning     0\n",
-      "TEMP        0\n",
-      "PRES        0\n",
-      "PM2.5       0\n",
-      "NOx         0\n",
-      "PM10        0\n",
-      "C2H3NO5     0\n",
-      "CH4         0\n",
-      "Pb          0\n",
-      "NH3         0\n",
-      "SO2         0\n",
-      "O3          0\n",
-      "CO          0\n",
-      "PAHs        0\n",
-      "H2CO        0\n",
-      "CFCs        0\n",
-      "dtype: int64\n",
-      "['index', 'TEMP', 'PRES', 'PM2.5', 'NOx', 'PM10', 'C2H3NO5', 'CH4', 'Pb', 'NH3', 'SO2', 'O3', 'CO', 'PAHs', 'H2CO', 'CFCs']\n",
-      "VarianceThreshold: Máme aj neužitočné dáta\n"
-     ]
-    }
-   ],
-   "source": [
-    "pipeline2 = pipelineGenerator2()\n",
-    "X_train, X_test, y_train, y_test = pipeline2.fit_transform(df_not_changed.copy())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "33929824-a8b4-4902-9a33-474610079b13",
    "metadata": {},
@@ -1222,6 +1160,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b103f36-31a3-468a-894e-ed208e3e0d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_results(predict_train, predict_test, y_train, y_test):\n",
+    "    \n",
+    "    print(\"Predicting for train dataset:\")\n",
+    "    print(classification_report(y_train, pred_train))\n",
+    "\n",
+    "    print(\"Predicting for test dataset:\")\n",
+    "    print(classification_report(y_test, pred_test))\n",
+    "    \n",
+    "    pass"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4be82e7e-5cdb-4e0e-9d3d-f4d4dee70226",
    "metadata": {},
@@ -1238,6 +1194,56 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec6cc307-8779-49d1-b219-e640ace1246d",
+   "metadata": {},
+   "source": [
+    "## Trénovanie a vyhodnotenie klasifikátorov strojového učenia \n",
+    "* Na trénovanie využite minimálne jeden stromový algoritmus strojového učenia v scikit-learn.\n",
+    "* Vizualizujte natrénované pravidlá.\n",
+    "* Vyhodnoťte natrénované modely pomocou metrík accuracy, precision a recall\n",
+    "* Porovnajte ašpoň jeden natrénovaný klasifikátor v scikit-learn s jednoduchým klasifikátorom z prvého kroku."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9843431f-43a7-40cd-a3cf-cf604b9428f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 3.2.1 Decision tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05d11285-dd95-4d54-99f2-053b27872dd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decisionTreeDriver(X_train, X_test, y_train, y_test):\n",
+    "    \n",
+    "    cls = DecisionTreeClassifier(max_depth=None, random_state=1)\n",
+    "    cls.fit(X_train, y_train)\n",
+    "    \n",
+    "    pred_train = cls.predict(X_train)\n",
+    "    pred_test = cls.predict(X_test)\n",
+    "    \n",
+    "    return cls, pred_train, pred_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e710b84-20b7-44fa-9c68-6ed8bdead31f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test"
+   ]
   }
  ],
  "metadata": {
